--- a/roles/update/tasks/main.yml
+++ b/roles/update/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Update apt cache (Ubuntu)
+  apt:
+    update_cache: yes
+  when: ansible_os_family == "Debian"
+  
 - name: Update all packages
   package:
     name: "*"
