--- a/inventories/lab/hosts.ini
+++ b/inventories/lab/hosts.ini
@@ -1,5 +1,5 @@
 [rocky]
-rockyvm ansible_host=192.168.0.92
+rockyvm ansible_host=192.168.0.92 ansible_user=root
 
 [ubuntu]
-ubuntuvm ansible_host=192.168.0.91
+ubuntuvm ansible_host=192.168.0.91 ansible_user=root
