--- a/roles/update/tasks/main.yml
+++ b/roles/update/tasks/main.yml
@@ -3,8 +3,10 @@
   apt:
     update_cache: yes
   when: ansible_os_family == "Debian"
-  
+  tags: update
+
 - name: Update all packages
   package:
     name: "*"
     state: latest
+  tags: update
